<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="@dimen/_4sdp"
    app:cardElevation="@dimen/_4sdp"
    android:layout_marginHorizontal="@dimen/_16sdp"
    android:layout_marginVertical="@dimen/_8sdp"
    app:cardPreventCornerOverlap="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/_8sdp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTitleVisibility"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                tools:text="@string/visibility"
                android:background="@color/colorGrey"

                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtVisibility"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:textAllCaps="false"
                android:background="@color/colorGrey"

                android:layout_gravity="center"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="@+id/txtTitleVisibility"
                app:layout_constraintStart_toStartOf="@+id/txtTitleVisibility"
                app:layout_constraintTop_toBottomOf="@+id/txtTitleVisibility" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTitleTemp"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                tools:text="@string/temp"
                android:background="@color/colorGrey"

                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtTemp"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:textAllCaps="false"
                android:background="@color/colorGrey"

                android:layout_gravity="center"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="@+id/txtTitleVisibility"
                app:layout_constraintStart_toStartOf="@+id/txtTitleVisibility"
                app:layout_constraintTop_toBottomOf="@+id/txtTitleVisibility" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTitleHumidity"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@color/colorGrey"
                tools:text="@string/humidity"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtHumidity"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_4sdp"
                android:textAllCaps="false"
                android:background="@color/colorGrey"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="@+id/txtTitleVisibility"
                app:layout_constraintStart_toStartOf="@+id/txtTitleVisibility"
                app:layout_constraintTop_toBottomOf="@+id/txtTitleVisibility" />

        </LinearLayout>


    </LinearLayout>
</com.google.android.material.card.MaterialCardView>